# lodrom-hardware

./: .gitignore  README.md
docs/: esquematico.drawio
docs/lodrom_test/: lodrom_test.kicad_prl  lodrom_test.kicad_pro  lodrom_test.kicad_sch  lodrom_test.wbk
docs/lodrom_test/models/bc337-40/: bc337-40.asy  bc337-40_spice.lib
lodrom/: CMakeLists.txt  partition-command.txt  partitions.csv  sdkconfig  sdkconfig.old
lodrom/.cache/clangd/index/: aes3_tie_log.c.4E0B3265F485E19C.idx  config.h.7E72B7CE5BA99262.idx  dns_server.c.E8E9D72288C08FDC.idx  dns_server.h.5411E65B88924450.idx  dsp_common.h.53626EEA31584B7D.idx  dsp_err.h.AC8A34AE0444EE4B.idx  dsp_err_codes.h.4C3DB6DF7BB71FDD.idx  dsp_types.h.060293EF8E71F546.idx  dspi_dotprod.h.1FC4DFC8C51CF210.idx  dspi_dotprod_f32_ansi.c.1B86BBB9940F0F37.idx  dspi_dotprod_off_f32_ansi.c.43AF436DA6D8313A.idx  dspi_dotprod_off_s16_aes3.S.C7AEA51911009D7E.idx  dspi_dotprod_off_s16_ansi.c.2045DB4E0835BAC5.idx  dspi_dotprod_off_s8_aes3.S.0171963CEB482D04.idx  dspi_dotprod_off_s8_ansi.c.6A88FB9340ABA50D.idx  dspi_dotprod_off_u16_aes3.S.52918EE46DDD2763.idx  dspi_dotprod_off_u16_ansi.c.A5BC403F34F2A834.idx  dspi_dotprod_off_u8_aes3.S.1A947C240276C088.idx  dspi_dotprod_off_u8_ansi.c.40F29A68DD707134.idx  dspi_dotprod_platform.h.CC5DA70910901A3C.idx  (+263 more)
lodrom/main/: CMakeLists.txt  lodrom.c  lodrom_api.c  lodrom_api.h  lodrom_audio.c  lodrom_audio.h  lodrom_mqtt.c  lodrom_mqtt.h  lodrom_pins.h  lodrom_spiffs.c  lodrom_spiffs.h  lodrom_wifi.c  lodrom_wifi.h
lodrom/main/old/: lodrom_audio.c.bak  lodrom_audio.h.bak
