idf_component_register(
                    SRCS    "lodrom.c"
                            "lodrom_wifi.c"
                            "lodrom_spiffs.c"
                            "lodrom_audio.c"
                            "lodrom_mqtt.c"
                    INCLUDE_DIRS "."
                    )
